# ProgramNote

./: LICENSE  README.md
Boost/geometry/: 基本形状
C++/: C++输入输出.txt  CMakeLists.txt  类型转换
CShare/: 1. Bitmap及相关.txt  2. 单例模式.txt  3. String转换.txt  4. 计时.txt
CShare/WPF/: 1. MVVM开发模式.txt  2. Bingding.txt  3. 选择时全选.txt  Bingding.txt  LiveCharts 安装.txt  异步委托.txt  选择时全选.txt
CShare/Winform/: 句柄及控件转换.txt  异步委托.txt  文件对话框
Linux/: 0. 安装系统-搭建环境  1. 疑难
OpenCV/: Blob.txt  Simd.txt  关于几何匹配
Python/: 1. 安装环境  10. 模块  2. 基础语法  3. 标准数据类型  4. 语句  5. 迭代器和生成器  6. 函数  7. 文件
QT/: 1. 类型转换.txt  2. 文件操作.txt  其他  样式表
halcon/: 99. halcon破解
halcon/1. 标定/: 2. 标定内参流程.txt  4. 计算相机外参  5. 九点标定.txt
halcon/2. 3D标定/: 1. 3D位姿.txt
halcon/3. 3D图像处理/: 1. 3D对象模型.txt  1. 图像处理.txt  2. 2D图像的3D匹配.txt  2. 3D匹配的通用流程.txt
halcon/4. 分类器/: 0. 总览.txt  1. GMM-高斯混合模型  3. SVM-支持向量机  4. MLP-多层感知器(神经网络)
halcon/5. 纹理相关/: 纹理.txt
halcon/6. 匹配/: shapeMatch
halcon/7. 测量/: 测量
halcon/9. packet/: 3. Memory Management.cpp  4. HALCON Data Types.cpp  5. Handling Iconic Objects and Control Parameters.cpp
halcon/99. 逆向研究/: 0. halcon破解  1. shapeModel.cpp  2. 解构.asm  3. 匹配算法关键部分.cpp  5. 核心算法-修改.cpp  汇编指令
halcon/标定/: 1. 标定.txt  3. 根据内参进行畸变矫正.txt
深度学习/: 0. 简介
深度学习/TensorFlow2/: 0. 构建环境  1.数据结构  2. 创建变量  3. 索引和切片
视觉/: 标定.txt
